Added page2, page3 and also updated with routing between pages

--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Web Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>My First heading</h1>
-    <p>My First paragraph</p>
+    <!-- container to wrap everything -->
+    <div id="container">
+        <!-- Brand of website -->
+        <header>My Web Site Brand</header>
+        <!-- Main Navigation -->
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="page2.html">About</a></li>
+                <li><a href=""></a>Gallery</a></li>
+                <li><a href="page3.html">Contact</a></li>
+            </ul>
+        </nav>
+        <!-- End Navigation -->
+        <!-- Start Main Centent -->
+        <main>
+            <h1>My First heading</h1>
+            <p>My First paragraph</p>
+            <img src="images/central_park.jpg" alt="Cental Oark" width="500">
+        </main>
+        <!-- End Main Content -->
+        <footer>&copy; Copyright 2021</footer>
+    </div>
 </body>
+
 </html>
