Updated with background image and removed img tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Web Page</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- Embed Style Method -->
+    <style>
+        header {
+            background: url(images/central_park.jpg) 0 -200px  no-repeat;
+            background-size: 1500px;
+            height: 400px;
+        }
+    </style>
 </head>
 
 <body>
@@ -27,7 +35,7 @@
         <main>
             <h1>My First heading</h1>
             <p>My First paragraph</p>
-            <img src="images/central_park.jpg" alt="Cental Oark" width="500">
+            <!-- <img src="images/central_park.jpg" alt="Cental Oark" width="500"> -->
         </main>
         <!-- End Main Content -->
         <footer>&copy; Copyright 2021</footer>
