remove main height in css

--- a/index.html
+++ b/index.html
@@ -5,59 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Web Page</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <!-- Embed Style Method -->
-    <style>
-        header {
-            background: url(images/central_park.jpg) 0 -200px  no-repeat;
-            background-size: 1500px;
-            height: 400px;
-            padding-top: 100px;
-            padding-left: 100px;
-            font-weight: bold;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        li {
-            list-style-type: none;
-            display: inline;
-            padding: 0 20px;
-        }
-        li a {
-            text-decoration: none; /* Remove Underline */
-        }
-        li a:link {
-            color: #000; /* Before Click */
-        }
-        li a:visited {
-            color: #818db3; /* After Click */
-        }
-        li a:hover {
-            color: #333; /* Mouse Over */
-        }
-        li a:active {
-            color: #753a30; /* Mouse Down */
-        }
-        nav {
-            background-color: rgb(255, 245, 238);
-            height: 50px;
-            text-align: center;
-            padding-top: 2px;
-        }
-        main {
-            height: 400px; /* give some height to get a better sense of how the page could look like */
-        }
-        main h1 {
-            color: rgb(129, 141, 179);
-            font-family: arial;
-        }
-        footer {
-            height: 40px;
-            background-color: rgb(129, 141, 179);
-            text-align: center;
-            padding-top: 20px;
-            color: rgb(211, 218, 240);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -79,7 +27,6 @@
         <main>
             <h1>My First heading</h1>
             <p>My First paragraph</p>
-            <!-- <img src="images/central_park.jpg" alt="Cental Oark" width="500"> -->
         </main>
         <!-- End Main Content -->
         <footer>&copy; Copyright 2021</footer>
