added table and form css styling

--- a/page3.html
+++ b/page3.html
@@ -29,25 +29,24 @@
             <p>My Third paragraph</p>
             <form action="/signup" method="POST">
                 <fieldset>
-                    <legend>User personal information</legend><br>
-                    <label for="">Enter your full name</label><br>
-                    <input type="text" name="name"><br>
-                    <label for="">Enter your email</label><br>
-                    <input type="email" name="email"><br>
-                    <label for="">Enter your phone</label><br>
-                    <input type="tel" name="phone"><br><br>
-                    <label for="">Select your gender</label><br>
+                    <legend>User personal information</legend>
+                    <label for="">Enter your full name</label>
+                    <input type="text" name="name">
+                    <label for="">Enter your email</label>
+                    <input type="email" name="email">
+                    <label for="">Enter your phone</label>
+                    <input type="tel" name="phone">
+                    <label for="">Select your gender</label>
                     <input type="radio" name="gender" value="male">Male
-                    <input type="radio" name="gender" value="femalw">Female<br><br>
-                    <label for="">How should we contact you?</label><br>
+                    <input type="radio" name="gender" value="femalw">Female
+                    <label for="">How should we contact you?</label>
                     <select>
                         <option value="email">Email</option>
                         <option value="tel">Phone</option>
-                    </select><br><br>
-                    <label>Tell us the reason of your visit today:</label><br>
-                    <textarea cols="30" rows="5"></textarea><br><br>
-                    <input type="submit" value="Send">
-                    <input type="reset" value="reset">
+                    </select>
+                    <label>Tell us the reason of your visit today:</label>
+                    <textarea cols="30" rows="5"></textarea>
+                    <input type="submit" value="Sign-up">
                 </fieldset>
             </form>
         </main>
