--- a/page2.html
+++ b/page2.html
@@ -27,7 +27,7 @@
         <main>
             <h1>My Second heading</h1>
             <p>My Second paragraph</p>
-            <table border="1">
+            <table>
                 <caption>Calories Comparison of popular Burgers</caption>
                 <thead>
                     <tr>
