added images on 4th page

--- a/page4.html
+++ b/page4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Web Page</title>
+    <title>My Thrid Web Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +12,7 @@
     <!-- container to wrap everything -->
     <div id="container">
         <!-- Brand of website -->
-        <header style="font-size: 60px; color: #fff;">My Web Site Brand</header>
+        <header>My Fourth Web Page</header>
         <!-- Main Navigation -->
         <nav>
             <ul>
@@ -25,8 +25,17 @@
         <!-- End Navigation -->
         <!-- Start Main Centent -->
         <main>
-            <h1>My First heading</h1>
-            <p>My First paragraph</p>
+            <h1>My Fourth heading</h1>
+            <p>My Fourth paragraph</p>
+
+            <ul id="album">
+                <li class="photo"><img src="images/winterland1.jpg" alt="Winter Land Image 1"></li>
+                <li class="photo"><img src="images/winterland2.jpg" alt="Winter Land Image 2"></li>
+                <li class="photo"><img src="images/winterland3.jpg" alt="Winter Land Image 3"></li>
+                <li class="photo"><img src="images/winterland4.jpg" alt="Winter Land Image 4"></li>
+                <li class="photo"><img src="images/winterland5.jpg" alt="Winter Land Image 5"></li>
+                <li class="photo"><img src="images/winterland6.jpg" alt="Winter Land Image 6"></li>
+            </ul>
         </main>
         <!-- End Main Content -->
         <footer>&copy; Copyright 2021</footer>
