--- a/page4.html
+++ b/page4.html
@@ -1,45 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Thrid Web Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <!-- container to wrap everything -->
     <div id="container">
-        <!-- Brand of website -->
-        <header>My Fourth Web Page</header>
-        <!-- Main Navigation -->
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="page2.html">About</a></li>
-                <li><a href="page4.html">Gallery</a></li>
-                <li><a href="page3.html">Contact</a></li>
-            </ul>
-        </nav>
-        <!-- End Navigation -->
-        <!-- Start Main Centent -->
-        <main>
-            <h1>My Fourth heading</h1>
-            <p>My Fourth paragraph</p>
+      <!-- Brand of website -->
+      <header>My Fourth Web Page</header>
+      <!-- Main Navigation -->
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="page2.html">About</a></li>
+          <li><a href="page4.html">Gallery</a></li>
+          <li><a href="page3.html">Contact</a></li>
+        </ul>
+      </nav>
+      <!-- End Navigation -->
+      <!-- Start Main Centent -->
+      <main>
+        <h1>My Fourth heading</h1>
+        <p>My Fourth paragraph</p>
 
-            <ul id="album">
-                <li class="photo"><img src="images/winterland1.jpg" alt="Winter Land Image 1"></li>
+        <ul id="album">
+          <!-- <li class="photo"><img src="images/winterland1.jpg" alt="Winter Land Image 1"></li>
                 <li class="photo"><img src="images/winterland2.jpg" alt="Winter Land Image 2"></li>
                 <li class="photo"><img src="images/winterland3.jpg" alt="Winter Land Image 3"></li>
                 <li class="photo"><img src="images/winterland4.jpg" alt="Winter Land Image 4"></li>
                 <li class="photo"><img src="images/winterland5.jpg" alt="Winter Land Image 5"></li>
-                <li class="photo"><img src="images/winterland6.jpg" alt="Winter Land Image 6"></li>
-            </ul>
-        </main>
-        <!-- End Main Content -->
-        <footer>&copy; Copyright 2021</footer>
+                <li class="photo"><img src="images/winterland6.jpg" alt="Winter Land Image 6"></li> -->
+        </ul>
+      </main>
+      <!-- End Main Content -->
+      <footer>&copy; Copyright 2021</footer>
     </div>
-</body>
+    <script>
+      var photos = []; //Decalre an emty array to store image element
+      var fileNames = []; //Decalre an emty array to store image file name
+      var imageList = []; //Decalre an emty array to store html list that contains an image
+      var image; //Declare an empty variable to store the assembled image list codes
+      var openList = "<li class='photo'>"; //Declare a variable to contain open list tag
+      var closeList = "<li>"; //Declare a variable to contain close list tag
 
+      //Create a loop to create 6 images string with index of 0
+      for (var i = 0; i < 6; i++) {
+        fileNames.push("winterland" + (i + 1)); //Create image file name and store in the array
+        photos.push("<img src='images/" + fileNames[i] + ".jpg'>"); //Assemble file name into image element and store in an array
+        image = openList + photos[i] + closeList; //Assemble image element from array with list element and store in a variable
+        imageList.push(image); //Store(push) the assembled list codes into an array
+      }
+
+      //Display all six image codes stored in the array
+      document.getElementById("album").innerHTML = imageList;
+    </script>
+  </body>
 </html>
